--- a/assignments.html
+++ b/assignments.html
@@ -939,13 +939,13 @@ d-appendix d-footnote-list a.footnote-backlink {
 .distill-site-footer a:hover {
   color: var(--hover-color, white);
 }</style>
-<script src="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\pandoc\header-attrs.js"></script>
-<script src="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\jquery\jquery.min.js"></script>
+<script src="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\pandoc\header-attrs.js"></script>
+<script src="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\jquery\jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\bootstrap\css\bootstrap.min.css" rel="stylesheet" />
-<script src="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\bootstrap\js\bootstrap.min.js"></script>
-<script src="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\bootstrap\shim\html5shiv.min.js"></script>
-<script src="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\bootstrap\shim\respond.min.js"></script>
+<link href="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\bootstrap\css\bootstrap.min.css" rel="stylesheet" />
+<script src="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\bootstrap\js\bootstrap.min.js"></script>
+<script src="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\bootstrap\shim\html5shiv.min.js"></script>
+<script src="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\bootstrap\shim\respond.min.js"></script>
 <style>h1 {font-size: 34px;}
        h1.title {font-size: 38px;}
        h2 {font-size: 30px;}
@@ -955,9 +955,9 @@ d-appendix d-footnote-list a.footnote-backlink {
        h6 {font-size: 12px;}
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
-<script src="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\navigation-1.1\tabsets.js"></script>
-<link href="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\highlightjs\default.css" rel="stylesheet" />
-<script src="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\highlightjs\highlight.js"></script>
+<script src="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\navigation-1.1\tabsets.js"></script>
+<link href="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\highlightjs\default.css" rel="stylesheet" />
+<script src="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\highlightjs\highlight.js"></script>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
