--- a/schedule.html
+++ b/schedule.html
@@ -939,13 +939,13 @@ d-appendix d-footnote-list a.footnote-backlink {
 .distill-site-footer a:hover {
   color: var(--hover-color, white);
 }</style>
-<script src="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\pandoc\header-attrs.js"></script>
-<script src="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\jquery\jquery.min.js"></script>
+<script src="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\pandoc\header-attrs.js"></script>
+<script src="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\jquery\jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\bootstrap\css\bootstrap.min.css" rel="stylesheet" />
-<script src="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\bootstrap\js\bootstrap.min.js"></script>
-<script src="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\bootstrap\shim\html5shiv.min.js"></script>
-<script src="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\bootstrap\shim\respond.min.js"></script>
+<link href="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\bootstrap\css\bootstrap.min.css" rel="stylesheet" />
+<script src="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\bootstrap\js\bootstrap.min.js"></script>
+<script src="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\bootstrap\shim\html5shiv.min.js"></script>
+<script src="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\bootstrap\shim\respond.min.js"></script>
 <style>h1 {font-size: 34px;}
        h1.title {font-size: 38px;}
        h2 {font-size: 30px;}
@@ -955,9 +955,9 @@ d-appendix d-footnote-list a.footnote-backlink {
        h6 {font-size: 12px;}
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
-<script src="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\navigation-1.1\tabsets.js"></script>
-<link href="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\highlightjs\default.css" rel="stylesheet" />
-<script src="C:\Users\daviddl\Documents\R\R-4.1.0\library\rmarkdown\rmd\h\highlightjs\highlight.js"></script>
+<script src="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\navigation-1.1\tabsets.js"></script>
+<link href="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\highlightjs\default.css" rel="stylesheet" />
+<script src="C:\Users\daviddl\Documents\R\win-library\3.6\rmarkdown\rmd\h\highlightjs\highlight.js"></script>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -1222,7 +1222,7 @@ $(document).ready(function () {
 <li>Install statistical software</li>
 </ul>
 <p>Readings: TBD</p>
-<p>Lecture slides: <a href="./slides/EDUC641_1_intro.html">html file</a></p>
+<p>Lecture slides: <a href="./slides/EDUC641_1_intro.html">html file</a>, <a href="./slides/EDUC641_1_intro.pdf">pdf file</a></p>
 <p>R Tutorial slides: <a href="./slides/tutorial.html">html file</a></p>
 </div>
 <div id="week-2" class="section level3">
@@ -1239,7 +1239,7 @@ $(document).ready(function () {
 <p>Readings: TBD</p>
 <p>Lecture:</p>
 <ul>
-<li>Slides: <a href="./slides/EDUC641_2_categ_1.html">html file</a></li>
+<li>Slides: <a href="./slides/EDUC641_2_categ_1.html">html file</a>, <a href="./slides/EDUC641_2_categ_1.pdf">pdf file</a></li>
 <li>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a>, <a href="./data/deathpenalty.csv">codebook</a></li>
 <li>R script: <a href="./slides/EDUC641_2_code.R">R script</a></li>
 </ul>
@@ -1266,7 +1266,7 @@ $(document).ready(function () {
 <p>Readings: TBD</p>
 <p>Lecture:</p>
 <ul>
-<li>Slides: <a href="./slides/EDUC641_2_categ_2.html">html file</a></li>
+<li>Slides: <a href="./slides/EDUC641_2_categ_2.html">html file</a>, <a href="./slides/EDUC641_2_categ_2.pdf">pdf file</a></li>
 <li>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a>, <a href="./data/deathpenalty.csv">codebook</a></li>
 <li>R Script:</li>
 </ul>
