--- a/slides/continuous_l1.html
+++ b/slides/continuous_l1.html
@@ -16,24 +16,15 @@ class: center, middle, inverse, title-slide
 
 # EDUC 641 Continuous Data
 ### Professor Name
-### 02 August, 2021
+### 16 August, 2021
 
 ---
 
 class: inverse, center, middle
 
 
-## ADD NOTES ABOUT STATISTICAL TESTS FOR NORMALITY. There are uses for them but not necessarily better than visual inspection. WE RECOMMEND VISUAL INSPECTION. 
-
-## Demonstrate examples of acceptable/non-acceptable non-normality?
 
 
-
-
-```
-##    vars   n  mean   sd median trimmed  mad min max range skew kurtosis  se
-## X1    1 183 71.64 8.15     74   72.13 7.41  51  88    37 -0.5    -0.47 0.6
-```
 
 # Agenda
 * Objectives
@@ -61,16 +52,19 @@ There are many ways to describe the characteristics of a distribution.
 
 Today we are reviewing:
 
-Measures of Central Tendency
-  * Mean
-  * Median
-  * Mode
+* Measures of Central Tendency
+  + Mean
+  + Median
+  + Mode
   
-Spread or Variability
-  * Variance
-  * Standard Deviation
-  * Interquartile Range
-  * Range
+* Spread or Variability
+  + Variance
+  + Standard Deviation
+  + Interquartile Range
+  + Range
+
+* Measures of Skewness
+* Measures of Kurtosis
   
 ---
 # But first, summation notation
@@ -83,21 +77,13 @@ Summation (or sigma) notation is used to provide a concise expression for the su
 ## Mean
 * Represents the **average**, or the sum of all observations divided by the number of observations.
 * One of the most common forms of central tendency.
+* Represented by the Greek symbol `\(\mu\)`.
 
 &gt; `$$\bar{X} = \frac{1}{n}{\sum_{i=i}^{n} X_{i}}$$`
  
 &gt; `$$mean(71, 73, 76, 78, 79) = \frac{71 + 73 + 76 + 78 + 79}{5} = 75.4$$`
 
-
-```r
-mean(who$life_expectancy)
-```
-
-```
-## [1] 71.63934
-```
-
-The mean national life expectancy in 2015 is **71.64** years
+The mean national life expectancy in 2015 is **71.64** years.
 ---
 # Central Tendency
 ## Median
@@ -108,7 +94,6 @@ The mean national life expectancy in 2015 is **71.64** years
 
 &gt; `$$median(71, 73, 76, 78, 79) = 76$$`
 &gt; `$$median(71, 73, 76, 77, 78, 79) = 76.5$$`
-
 
 ```r
 median(who$life_expectancy)
@@ -148,91 +133,32 @@ Both 8 and 9 are observed seven times. In this case, the data can be considered 
 In general, the mode is rarely used and is particularly vulnerable to idiosyncratic patterns in the data.
 
 ---
-# Distributional Shape
-## Skew
-* In a normal distribution, the &lt;span style="color: red;"&gt;mean&lt;/span&gt;, &lt;span style="color: blue;"&gt;median&lt;/span&gt;, and &lt;span style="color: purple;"&gt;mode&lt;/span&gt;, will provide similar estimates of central tendency.
-
-
-
-* *But*, no distribution in the real world is perfectly normal and data can often have asymmetry or **skewness**.
-
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-5-1.png" style="display: block; margin: auto;" /&gt;
-
----
-# Distributional Shape
-## Kurtosis
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-6-1.png" style="display: block; margin: auto;" /&gt;
-
----
-
-## How do we assess kurtosis &amp; skew?
-
-ADD CONTENT
-
----
-# Central Tendency and Asymmetry 
-
-* &lt;span style="color: red;"&gt;Mean&lt;/span&gt;
-* &lt;span style="color: blue;"&gt;Median&lt;/span&gt;
-* &lt;span style="color: purple;"&gt;Mode&lt;/span&gt;
-
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-7-1.png" style="display: block; margin: auto;" /&gt;
-
----
-# Summarizing Data
-## Applied Example
-
-* Here is a density plot of the WHO life expectancy data for 2015. 
-* How would you characterize the distribution?
-
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-8-1.png" style="display: block; margin: auto;" /&gt;
-
-&gt; * Is it approximately normal?
-&gt; * Is there severe skew?
-&gt; * Is there severe kurtosis?
-
-Which measure of central tendency would you be inclined to use?
----
-
-# Summarizing Data
-## Applied Example
-
-The distribution of life expectancy is approximately normal, though with a slightly negative skew.
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-9-1.png" style="display: block; margin: auto;" /&gt;
-
-The &lt;span style="color: red;"&gt;mean&lt;/span&gt; national life expectancy in 2015 was **71.62** years.
-
-The &lt;span style="color: blue;"&gt;median&lt;/span&gt; national life expectancy in 2015 was **74** years.
-
-* The median appears to better capture the "center" of our distribution.
----
 
 # Response Opportunity
 ## Comparing Distributions
 
-These distributions are approximately normal and have the same mean (m = 100).
+These distributions have the same central tendency `\((\mu = 100)\)`.
 
 How are they different?
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-10-1.png" style="display: block; margin: auto;" /&gt;
-
----
-
-# Variability
-
-Just knowing the central tendency of a distribution doesn't give us enough information.
-
-What if we want to know how much variation there is in life expectancy across nations?
-
-**Measures of Variability:**
-* Range
-* Interquartile Range
-* Variance
-* Standard Deviation
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-3-1.png" style="display: block; margin: auto;" /&gt;
 
 ---
 # Variability
-## Range
+
+* Central tendency is only one component of a distribution.
+
+* What if we want to know how much variation there is in life expectancy across nations?
+  + How much does typical observation deviate from the mean?
+
+* **Measures of Variability:**
+  + Range
+  + Interquartile Range
+  + Variance
+  + Standard Deviation
+
+---
+# Range
 
 * Represents the difference between the highest value and lowest value in the dataset.
 * Can provide a rough estimate of spread
@@ -243,6 +169,187 @@ What if we want to know how much variation there is in life expectancy across na
 
 &gt; `$$range(55, 73, 76, 78, 79) = 79 - 55 = 24$$`
 
+---
+# Interquartile Range (IQR)
+* Represents the difference between the 1st quartile (25th percentile) and the 3rd quartile (75th percentile).
+
+* **Percentile** refers to the percentage of observations that fall at or below that score.
+  + e.g., 25% of observed national life expectancies fall at or below 66 years of age.
+
+* IQR summarizes the range of "average" scores in the dataset.
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-4-1.png" style="display: block; margin: auto;" /&gt;
+
+---
+# Variance
+* Represents the **average squared deviation** of each observation from the mean.
+
+`$$s^{2} = \frac{\sum_{i=i}^{n} x_{i}}{n}$$`
+* Why do we square the deviation?
+  + Here are some national life expectancies centered around the mean. Their value represents their difference relative to the sample mean.
+  + Some observations fall below the mean so their deviation is a negative value. If we took the average of our positive and negative deviations, we'd just get zero!
+  
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-5-1.png" style="display: block; margin: auto;" /&gt;
+---
+# Variance
+Since any number squared is positive, let's try squaring our deviations.
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-6-1.png" style="display: block; margin: auto;" /&gt;
+Now we can take the average of our squared deviations and get a non-zero value!
+---
+# Variance
+
+Our variance (or average squared deviation) is approximately 66.43.
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-7-1.png" style="display: block; margin: auto;" /&gt;
+
+By itself, a variance of 66.43 is not very meaningful to us. It does not reflect the raw units of our original scale (it represents squared units).
+---
+# Standard Deviation
+
+* If we take the square root of our sample variance, we can summarize average deviations back on our raw scale. 
+
+* The standard deviation represents the **positive square root of the variance**.
+$$ s = \sqrt{s^2} $$
+$$ \sqrt{66.43} = 8.15 $$
+
+The standard deviation of life expectancy in 2015 was approximately 8.15 *years*.
+
+---
+# Standard Deviation
+
+Here is our original plot with our &lt;span style="color: red;"&gt;standard deviation&lt;/span&gt; plotted below and above the mean (i.e., -1 SD, +1 SD).
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-8-1.png" style="display: block; margin: auto;" /&gt;
+
+The standard deviation of life expectancy in 2015 was approximately 8.15 *years*.
+
+---
+# Z-unit Distribution
+
+* A distribution can have any mean and any (positive) standard deviation.
+* A z-distribution is a useful distribution with a mean of 0 `\((\mu)\)` and a standard deviation `\((\sigma)\)` of 1.
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-9-1.png" style="display: block; margin: auto;" /&gt;
+
+---
+# Transforming Distributions
+* Any distribution can be transformed into a z distribution using a linear function.
+
+Each observation is transformed into a **z-score** using the following formula:
+`$$z = \frac{X - \mu}{\sigma}$$`
+
+* A z-score is calculated by **subtracting the mean** from each value and **dividing by the standard deviation**.
+
+* An observations z-score value is equal to its deviation from the mean, as measured in standard deviation units.
+
+---
+# Transforming Distributions
+
+Here is a histogram of our life expectancy data.
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-10-1.png" style="display: block; margin: auto;" /&gt;
+
+We are going to create a new variable called `life_expectancy_zscore` using the linear function described on the previous slide.
+
+```r
+who$life_expectancy_zscore &lt;- (who$life_expectancy - mean(who$life_expectancy))/sd(who$life_expectancy)
+```
+
+---
+# Transforming Distributions
+
+Let's look at the first few transformed values.
+
+```r
+head(who$life_expectancy_zscore)
+```
+
+```
+## [1] -0.8145996  0.7804065  0.5350210 -2.4096058  0.5350210  0.5350210
+```
+
+
+```r
+## Histogram of the new z-scores
+hist(who$life_expectancy_zscore)
+```
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-13-1.png" style="display: block; margin: auto;" /&gt;
+
+Our new mean is 0.
+Our new standard deviation is 1.
+
+---
+# Distributional Shape
+## Skewness
+* Not all distributions in the real world are symmetrical. Often they have asymmetry or **skewness**.
+* Skewness describes how much a distribution is "bunched up" to the right or left.
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-14-1.png" style="display: block; margin: auto;" /&gt;
+
+* Positive Skew - Distribution is skewed to the left with a "positive-pointing finger."
+* Negative Skew - Distribution is skewed to the right with a "negative-pointing finger."
+
+---
+# Distributional Shape
+## Kurtosis
+
+* Kurtosis describes how much the values concentrate around the center.
+ + Leptokurtic distributions have more values around the center and have a "taller" peak.
+ + Platykurtic distributions do not have a prominent peak and have a flatter top.
+ 
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-15-1.png" style="display: block; margin: auto;" /&gt;
+---
+# Evaluating Skewness and Kurtosis
+
+* Skewness and kurtosis can be evaluated visually and summarized quantitatively.
+
+  + Positive skew (skewed to the left) ----&gt; Skewness &gt; 0
+  + Negative skew (skewed to the right) ----&gt; Skewness &gt; 0
+
+  + Leptokurtic ----&gt; Kurtosis &gt; 0
+  + Platykurtic ----&gt; Kurtosis &lt; 0
+  
+---
+# Summarizing Data
+## Applied Example
+
+* Here is a density plot of the WHO life expectancy data for 2015. 
+* How would you characterize the distribution?
+
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-16-1.png" style="display: block; margin: auto;" /&gt;
+
+* Is there severe skew?
+* Is there severe kurtosis?
+
+---
+# Summarizing Data
+## Applied Example
+
+The distribution of life expectancy has a slightly negative skew.
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-17-1.png" style="display: block; margin: auto;" /&gt;
+
+
+```r
+psych::describe(who$life_expectancy) %&gt;% 
+  select(n, mean)
+```
+
+```
+##      n  mean
+## X1 183 71.64
+```
+
+The &lt;span style="color: red;"&gt;mean&lt;/span&gt; national life expectancy in 2015 was **71.62** years.
+
+The &lt;span style="color: blue;"&gt;median&lt;/span&gt; national life expectancy in 2015 was **74** years.
+
+* The median appears to better capture the "center" of our distribution.
+
+---
+
+
+### Applied Coding
 
 ```r
 # Outputs the min and max
@@ -264,82 +371,20 @@ max(who$life_expectancy) - min(who$life_expectancy)
 
 National average life expectancies in 2015 **ranged from 51 to 88**, for a total difference of **37 years**.
 
----
-# Variability
-## Interquartile Range
-* Represents the difference between the 1st quartile (25th percentile) and the 3rd quartile (75th percentile).
 
-* **Percentile** refers to the percentage of observations that fall at or below that score. 
-
-* Summarizes the range of "average" scores in the dataset.
-
-### ADD QUANTILE PLOT
-
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-13-1.png" style="display: block; margin: auto;" /&gt;
-
-
-```r
-IQR(who$life_expectancy)
-```
-
-```
-## [1] 11
-```
----
-# Variability
-## Variance
-* Represents the **average squared deviation** of each observation from the mean.
-
- `$$s^{2} = \frac{\sum_{i=i}^{n} x_{i}}{n}$$`
-
-**Why do we square the average deviation?**
-
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-15-1.png" style="display: block; margin: auto;" /&gt;
-* Here are some national life expectancies centered around the mean. Their value represents their difference relative to the sample mean.
-
-* Some observations fall below the mean so their deviation is a negative value. If we took the average of our positive and negative deviations, we'd just get zero!
 
 ---
-# Variance
-Since any number squared is positive, let's try squaring our deviations.
+##### Fodder
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-16-1.png" style="display: block; margin: auto;" /&gt;
-Now we can take the average of our squared deviations and get a non-zero value!
 ---
-## Variance
+# Central Tendency and Asymmetry 
 
+* &lt;span style="color: red;"&gt;Mean&lt;/span&gt;
+* &lt;span style="color: blue;"&gt;Median&lt;/span&gt;
+* &lt;span style="color: purple;"&gt;Mode&lt;/span&gt;
 
-```r
-var(who$life_expectancy)
-```
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-21-1.png" style="display: block; margin: auto;" /&gt;
 
-```
-## [1] 66.42965
-```
-
-Our variance (or average squared deviation) is approximately 66.43.
-
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-18-1.png" style="display: block; margin: auto;" /&gt;
-
-By itself, a variance of 66.43 is not very meaningful to us. It does not reflect the raw units of our original scale (it represents squared units).
----
-# Variability
-## Standard Deviation
-
-* If we take the square root of our sample variance, we can summarize average deviations back on our raw scale. 
-
-* The standard deviation represents the **positive square root of the variance**.
-$$ s = \sqrt{s^2} $$
-
-```r
-sd(who$life_expectancy)
-```
-
-```
-## [1] 8.150439
-```
-
-The standard deviation of life expectancy in 2015 was approximately 8.15 *years*.
 ---
 # Variability
 ## Variance and Standard Deviation
@@ -356,7 +401,7 @@ ggplot(x, aes(x = pos_skew)) +
   geom_vline(xintercept = mean(x$pos_skew) + sd(x$pos_skew), color = "cornflowerblue")
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-20-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-22-1.png" style="display: block; margin: auto;" /&gt;
 
 ```r
 ggplot(x, aes(x = neg_skew)) +
@@ -366,7 +411,7 @@ ggplot(x, aes(x = neg_skew)) +
   geom_vline(xintercept = mean(x$neg_skew) + sd(x$neg_skew), color = "cornflowerblue")
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-20-2.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-22-2.png" style="display: block; margin: auto;" /&gt;
 
 ```r
 ggplot(x, aes(x = central)) +
@@ -376,7 +421,7 @@ ggplot(x, aes(x = central)) +
   geom_vline(xintercept = mean(x$central) + sd(x$central), color = "cornflowerblue")
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-20-3.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-22-3.png" style="display: block; margin: auto;" /&gt;
 ---
 ## Visualizing Variance
 ADD CONTENT ON BOXPLOTS, ETC.
@@ -396,21 +441,21 @@ map(x, ~ ggplot(x, aes(.x)) +
 ## $pos_skew
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-21-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-23-1.png" style="display: block; margin: auto;" /&gt;
 
 ```
 ## 
 ## $neg_skew
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-21-2.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-23-2.png" style="display: block; margin: auto;" /&gt;
 
 ```
 ## 
 ## $central
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-21-3.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-23-3.png" style="display: block; margin: auto;" /&gt;
 
 ```r
 ggplot(x, aes(pos_skew)) +
@@ -418,18 +463,14 @@ ggplot(x, aes(pos_skew)) +
   geom_vline(xintercept = mean(pos_skew))
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-21-4.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-23-4.png" style="display: block; margin: auto;" /&gt;
 
 ```r
 ggplot(x, aes(neg_skew)) +
   geom_density()
 ```
 
-&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-21-5.png" style="display: block; margin: auto;" /&gt;
-
----
-# Sampling Distributions
-```
+&lt;img src="continuous_l1_files/figure-html/unnamed-chunk-23-5.png" style="display: block; margin: auto;" /&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
